Mobile: Comments: Fix empty state's height
Before we were not passing any additional class to mobile-wizard-content
as a result and, even thought child elements were set to 100% height,
the empty state was still cropped. Pass additional class to parent and
make sure child is set to full height (minus header bar).

Also disables scroll indicator

--- a/browser/css/mobilewizard.css
+++ b/browser/css/mobilewizard.css
@@ -1110,6 +1110,15 @@ input[type='checkbox'][disabled] {
 	grid-row: 1;
 }
 
+#mobile-wizard-content.content-has-no-comments {
+	height: calc(100% - 48px);
+	min-height: auto;
+}
+
+#mobile-wizard-content.content-has-no-comments #mobile-wizard-scroll-indicator {
+	display: none;
+}
+
 #mobile-wizard-popup .empty-comment-wizard-container,
 #mobile-wizard .empty-comment-wizard-container {
 	height: 100%;
